# hfscf

./: .gitignore  CMakeLists.txt  README.md  hfscf_cmake_config.h.in  hfscf_meson_config.h.in  meson.build
basis/: 3-21g.gbs  6-31++g_st__st_.gbs  6-31+g.gbs  6-311+g.gbs  6-311+g_st_.gbs  6-311+g_st__st_.gbs  6-311g.gbs  6-311g_st_.gbs  6-31g(d,p).gbs  6-31g.gbs  6-31g_st_.gbs  6-31g_st__st_.gbs  aug-pc.gbs  cc-pvdz.gbs  cc-pvqz.gbs  cc-pvtz.gbs  dzp.gbs  jul-cc-pv(d+d)z.gbs  jun-cc-pv(t+d)z.gbs  sto-3g.gbs  sto-6g.gbs  vdz.gbs
examples/: ethanol.xyz
src/: CMakeLists.txt  hfscf_main.cpp  hfscf_main.hpp  meson.build
src/basis/: hfscf_basis.cpp  hfscf_basis.hpp  hfscf_trans_basis.cpp  hfscf_trans_basis.hpp
src/config_interaction/: hfscf_cis.cpp  hfscf_cis.hpp
src/gradient/: hfscf_grad_ints.cpp  hfscf_grad_misc.cpp  hfscf_grad_rhf.cpp  hfscf_grad_rhf_mp2.cpp  hfscf_grad_uhf.cpp  hfscf_gradient.hpp
src/hessian/: hfscf_freq.cpp  hfscf_freq.hpp  hfscf_hessian.cpp  hfscf_hessian.hpp  hfscf_hessian_ints.cpp  hfscf_hessian_resp.cpp  hfscf_hessian_resp_mp2.cpp
src/hfscf/: hfscf.cpp  hfscf.hpp  hfscf_geomopt.cpp  hfscf_numeric.cpp  hfscf_print.cpp
src/integrals/: hfscf_dipole.cpp  hfscf_dipole.hpp  hfscf_dipolederiv1.cpp  hfscf_oseri.cpp  hfscf_oseri.hpp  hfscf_oseri_screen.cpp  hfscf_oserideriv1.cpp  hfscf_oserideriv2pq.cpp  hfscf_oserideriv2qq.cpp  hfscf_oskinetic.hpp  hfscf_oskineticderiv1.cpp  hfscf_oskineticderiv2.cpp  hfscf_osnuclear.cpp  hfscf_osnuclear.hpp  hfscf_osnuclearderiv1.cpp  hfscf_osnuclearderiv2.cpp  hfscf_osoverlap.cpp  hfscf_osoverlap.hpp  hfscf_osoverlapderiv1.cpp  hfscf_osoverlapderiv2.cpp  hfscf_osrecur.hpp  hfscf_quadrupole.cpp  hfscf_quadrupole.hpp  hfscf_shell.cpp  hfscf_shell.hpp  hfscf_shellpair.cpp  hfscf_shellpair.hpp  hfscf_transform.cpp  hfscf_transform.hpp
src/irc/: README.md  cart_to_int.cpp  cart_to_int.hpp
src/irc/libirc/: connectivity.h  io.h  irc.h  linalg.h  mathtools.h  periodic_table.h  transformation.h
src/math/: gamma.cpp  gamma.hpp  hfscf_math.hpp  hfscf_tensor4d.hpp  hfscf_tensors.hpp  solid_harmonics.cpp  solid_harmonics.hpp
src/mol_properties/: hfscf_properties.cpp  hfscf_properties.hpp
src/molecule/: hfscf_atom.hpp  hfscf_constants.hpp  hfscf_elements.hpp  hfscf_keywords.hpp  hfscf_mol_print.cpp  hfscf_molecule.cpp  hfscf_molecule.hpp  hfscf_parser.hpp
src/postscf/: hfscf_post_cc.cpp  hfscf_post_cc.hpp  hfscf_post_cc_rhf.cpp  hfscf_post_cc_rhf.hpp  hfscf_post_mp.cpp  hfscf_post_mp.hpp
src/pretty_print/: hfscf_pretty_print.hpp
src/scfsolver/: hfscf_diis.cpp  hfscf_diis.hpp  hfscf_hf_hamiltonian.cpp  hfscf_hf_print.hpp  hfscf_hf_solver.cpp  hfscf_hf_solver.hpp  hfscf_rhf_print.cpp  hfscf_rhf_symsolver.cpp  hfscf_sad.cpp  hfscf_sad.hpp  hfscf_so_rhf.cpp  hfscf_so_uhf.cpp  hfscf_uhf_print.cpp  hfscf_uhf_solver.cpp  hfscf_uhf_solver.hpp  hfscf_uhf_symsolver.cpp
src/settings/: hfscf_settings.cpp  hfscf_settings.hpp
src/symmetry/: msym_helper.cpp  msym_helper.hpp
src/utils/: hfscf_zmat.cpp  hfscf_zmat.hpp
subprojects/libmsym/: CMakeLists.txt  README.md
